--- a/03-CSS-Fundamentals/style.css
+++ b/03-CSS-Fundamentals/style.css
@@ -1,11 +1,17 @@
+* {
+  /*   border-top: 10px solid #1098ad; */
+}
+body {
+  color: #444;
+  font-family: sans-serif;
+
+  border-top: 10px solid #1098ad;
+}
+
 h1,
 h2,
-h3,
-h4,
-p,
-li {
-  font-family: sans-serif;
-  color: #444;
+h3 {
+  color: #1098ad;
 }
 h1,
 h2,
@@ -130,4 +136,31 @@ a:hover {
 a:active {
   background-color: black;
   font-style: italic;
+}
+
+/* Resolving conflicts */
+
+/* #copyricht {
+  color: red;
+}
+
+.copyright {
+  color: blue;
+}
+
+.text {
+  color: yellow;
+}
+
+footer p {
+  color: green !important;
+} */
+
+/* nav a:link,
+nav strong {
+  font-size: 18px;
+} */
+
+nav {
+  font-size: 18px;
 }
