--- a/03-CSS-Fundamentals/style.css
+++ b/03-CSS-Fundamentals/style.css
@@ -1,13 +1,63 @@
 * {
   /*   border-top: 10px solid #1098ad; */
+  margin: 0px;
+  padding: 0px;
 }
+
+/*PAGE SECTIONS*/
 body {
   color: #444;
   font-family: sans-serif;
 
   border-top: 10px solid #1098ad;
+  position: relative;
 }
 
+.container {
+  width: 800px;
+  /* margin-left: auto;
+  margin-right: auto; */
+  margin: 0 auto;
+  /* position: relative; */
+}
+
+.main-header {
+  background-color: #f7f7f7;
+  /* padding: 20px;
+  padding-left: 40px;
+  padding-right: 40px; */
+
+  padding: 20px 40px;
+  margin-bottom: 60px;
+  /*height: 80px;*/
+}
+nav {
+  font-size: 18px;
+}
+article {
+  margin-bottom: 60px;
+}
+.post-header {
+  margin-bottom: 40px;
+  /* position: relative; */
+}
+
+aside {
+  background-color: #f7f7f7;
+  border-top: 5px solid #1098ad;
+  border-bottom: 5px solid #1098ad;
+  /* padding-top: 50px;
+  padding-bottom: 50px; */
+  padding: 50px 0px;
+
+  /* border-top: 5px solid #1098ad;
+  border-bottom: 5px solid #1098ad;
+  border-left: 5px solid #1098ad;
+  border-right: 5px solid #1098ad; */
+  width: 500px;
+}
+
+/*SMALLER ELEMENTS*/
 h1,
 h2,
 h3 {
@@ -31,10 +81,14 @@ h2 {
 p {
   font-size: 22px;
   line-height: 1.5;
+  margin-bottom: 15px;
+  /* display: inline; */
 }
 
 h3 {
   font-size: 30;
+  margin-bottom: 20px;
+  margin-top: 40px;
 }
 
 h4 {
@@ -43,8 +97,20 @@ h4 {
   text-align: center;
 }
 
+ul,
+ol {
+  margin-left: 50px;
+  margin-bottom: 20px;
+}
+
 li {
   font-size: 20px;
+  margin-bottom: 10px;
+  /* display: inline; */
+}
+
+li:last-child {
+  margin-bottom: 0px;
 }
 
 /* footer p {
@@ -77,24 +143,6 @@ li {
   list-style: none;
 }
 
-.main-header {
-  background-color: #f7f7f7;
-}
-
-aside {
-  background-color: #f7f7f7;
-  border: 5px solid #1098ad;
-
-  /* border-top: 5px solid #1098ad;
-  border-bottom: 5px solid #1098ad;
-  border-left: 5px solid #1098ad;
-  border-right: 5px solid #1098ad; */
-}
-
-body {
-  /*   background-color:black ; */
-}
-
 /* .first-li {
   font-weight: bold;
 } */
@@ -107,7 +155,7 @@ li:last-child {
   font-style: italic;
 }
 
-li:nth-child(even) {
+li:nth-child (even) {
   /* color: red; */
 }
 
@@ -137,7 +185,28 @@ a:active {
   background-color: black;
   font-style: italic;
 }
+/* LVHA */
+.post-img {
+  width: 100%;
+  height: auto;
+  margin: 100px;
+}
 
+nav a:link {
+  /* background-color: orangered;
+  margin: 20px;
+  padding: 20px;
+
+  display: block; */
+
+  margin-right: 30px;
+  margin-top: 10px;
+  display: inline-block;
+}
+
+nav a:link:last-child {
+  margin-right: 0px;
+}
 /* Resolving conflicts */
 
 /* #copyricht {
@@ -161,6 +230,18 @@ nav strong {
   font-size: 18px;
 } */
 
-nav {
-  font-size: 18px;
+button {
+  font-size: 22px;
+  padding: 20px;
+  cursor: pointer;
+  position: absolute;
+
+  /* top: 0;
+  left: 0; */
+
+  /* bottom: 0;
+  left: 0; */
+
+  bottom: 50px;
+  right: 50px;
 }
